--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,12 +2,13 @@
 <head>
 </head>
 <body>
-<form action="Cal" method="POST">
-    FirstData:<input type="text" name="a" value="100"><br>
-    SecondData:<input type="text" name="b" value="100">
-    <br><br>
-    <input type="submit" value="Cal Begin">
-</form><br>
-<p>data will to cal...</p>
+        <form action="Cal" method="GET">
+            FirstData:<input type="text" name="a" value="100"><br>
+            SecondData:<input type="text" name="b" value="50"><br>
+            <br><br>
+            <input type="submit" value="Cal Begin">
+        </form><br>
+        <p>Data will to Cal....</p>
 </body>
 </html>
+
