--- a/output/wwwroot/cal_index.html
+++ b/output/wwwroot/cal_index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-        <form action="Cal" method="GET">
+        <form action="Cal" method="POST">
             FirstData:<input type="text" name="a" value="100"><br>
             SecondData:<input type="text" name="b" value="50"><br>
             <br><br>
